--- a/_layouts/index.html
+++ b/_layouts/index.html
@@ -175,10 +175,12 @@
               </div>
             </div>
           </div>{% if forloop.index0 == 9 %}{% break %}{% endif %}{% endfor %}
-          .release-color-covers {
-            border: 6px solid;
-            border-radius: 5%;
-          }
+          <style>
+            .release-color-covers {
+              border: 6px solid;
+              border-radius: 5%;
+            }
+          </style>
         </div>  
         <a class="btn btn-outline-releases px-4 py-1" href="/releases" data-aos="flip-left">See more</a>
       </div>
