--- a/_layouts/index.html
+++ b/_layouts/index.html
@@ -289,7 +289,7 @@
         let cp = colorThief.getPalette($myImage[0], 8, 5);
         
         //Sets color to 4rd color in the palette.
-        $('.release-color').css('color','rgb(0,'+cp[3][1]+','+cp[3][2]+')');
+        $('.release-color').css('color','rgb('+cp[4][0]+','+cp[4][1]+','+cp[4][2]+')');
       });
     </script>
     <script>
