--- a/_layouts/fanlink.html
+++ b/_layouts/fanlink.html
@@ -220,7 +220,7 @@
           </ul>
         </div>
         <div class="mx-auto col-lg-12 text-center h5 website{% if page.dark == true %} text-dark{% endif %}">
-          <a href="https://bayzamusic.com/fanlinks" title="fanlinks">bayzamusic.com/fanlinks</a>
+          <a href="https://bayzamusic.com" title="fanlinks">bayzamusic.com</a>
         </div>
       </div>
     </div>
