--- a/_layouts/fanlink.html
+++ b/_layouts/fanlink.html
@@ -15,10 +15,10 @@
     <meta property="og:type" content="website"/>
     <meta property="og:title" content="{{ page.title }}"/>
     <meta property="og:site_name" content="{{ page.artists }}"/>
-    <meta property="og:image" itemprop="image" content="{{ page.image }}"/>
+    <meta property="og:image" content="{{ page.image }}"/>
+    <meta property="og:image:width" content="500"/>
+    <meta property="og:image:height" content="500"/>
     <meta property="og:image:alt" content="{{ page.title }}"/>
-    <meta property="og:image:width" content="300"/>
-    <meta property="og:image:height" content="300"/>
     <meta property="og:description" content="{{ page.artists }}"/>
 
     <!-- Twitter Card -->
