--- a/_layouts/fanlink.html
+++ b/_layouts/fanlink.html
@@ -11,7 +11,7 @@
     <meta name="description" content="{{ page.artists }}"/>
 
     <!-- Protocolo Open Graph -->
-    <meta property="og:url" content="{{ site.url }}/{{ page.link }}"/>
+    <meta property="og:url" content="https://bayzamusic.com/{{ page.link }}"/>
     <meta property="og:type" content="website"/>
     <meta property="og:title" content="{{ page.title }}"/>
     <meta property="og:site_name" content="{{ page.artists }}"/>
