--- a/_layouts/index.html
+++ b/_layouts/index.html
@@ -24,7 +24,7 @@
     
     <!-- Twitter Card -->
     <meta name="twitter:card" content="summary"/>
-    <meta name="twitter:title" content="Bayza"/>
+    <meta name="twitter:title" content="Bayza Music"/>
     <meta name="twitter:description" content="Bayza is a Panamanian musician and producer."/>
     <meta name="twitter:image" content="https://bayzamusic.com/images/logomt.jpg"/>
     <meta name="twitter:site" content="@bayzamusic"/>
