--- a/_layouts/index.html
+++ b/_layouts/index.html
@@ -133,7 +133,7 @@
       <div class="container text-secondary py-5 text-center" style="overflow-x: hidden;">
         <h3 class="mt-3 text-uppercase text-white" data-aos="fade-right">Latest Music</h3>
         <div class="row my-4 text-left">
-          <div class="col-6 col-lg-3">
+          <!-- <div class="col-6 col-lg-3">
             <div class="item">
               <div class="cover">
                 <div class="upcoming-container" data-aos="zoom-in">
@@ -146,8 +146,8 @@
                   <h5 class="mb-0" data-aos="fade-left"><small><p class="mb-0 mt-2">Lamentos</p></small></h5>
                   <small><p class="mb-4" data-aos="fade-left">Bayza</p></small>
               </div>
-            </div>
-          </div>{% for item in sorted %}
+            </div> 
+          </div>-->{% for item in sorted %}
           <div class="col-6 col-lg-3">
             <div class="item">
               <div class="cover">
@@ -159,7 +159,7 @@
                 <small><p class="mb-4" data-aos="fade-right">{{ item.date | date: "%b %-d, %Y" }}</p></small>
               </div>
             </div>
-          </div>{% if forloop.index0 == 10 %}{% break %}{% endif %}{% endfor %}
+          </div>{% if forloop.index0 == 11 %}{% break %}{% endif %}{% endfor %}
         </div>  
         <a class="btn btn-outline-releases px-4 py-1" href="/releases" data-aos="flip-left">See more</a>
       </div>
