--- a/_layouts/index.html
+++ b/_layouts/index.html
@@ -121,7 +121,7 @@
               <small><p class="mb-4 mt-1">{{ releases.last.date | date: "%b %-d, %Y" }}</p></small>
             </div>
             <div class="col-12 col-md-4 d-none d-md-block portfolio-block block-intro mt-2">
-              <div class="avatar mt-1 mr-0" style="border-radius:0px">
+              <div class="avatar mt-1 mr-0 text-left px-1" style="border-radius:0px">
                 <img id="coverimage" src="https://bayzamusic.com/images/releases/{{ releases.last.year }}/{{ releases.last.cover }}.jpg" alt="" width="120px" height="120px">
               </div>
             </div>
