--- a/_layouts/index.html
+++ b/_layouts/index.html
@@ -249,11 +249,11 @@
             He started in 2014 releasing Big Room House music during many years. It was until 2017 when he transitioned his style to Melbourne Bounce. In 2019 he transitioned one more time his style to Deep House, he first started making remixes/bootlegs of famous Pop songs, then in September he self-released his first album named Genuine. Then, In 2020 he focused on producing Deep House and Slap House music mainly.
           <p data-aos="fade-right">
             He has signed tracks with labels like
-            <b><a href="https://instagram.com/bounceunited" target="_blank" title="Bounce United Instagram">Bounce United</a></b>, 
-            <b><a href="https://www.youtube.com/channel/UCoo_WkQMj2h-WFi7nBQjtyw" target="_blank" title="Miss DeepShine YouTube Channel">DeepShine Records</a></b>, 
-            <b><a href="https://instagram.com/palmtherapysounds" target="_blank" title="Palm Therapy Sounds Instagram">Palm Therapy Sounds</a></b>, 
-            <b><a href="https://instagram.com/onesevenmusic" target="_blank" title="One Seven Music Instagram">One Seven Music</a></b>, 
-            <b><a href="https://instagram.com/frqncy_official" target="_blank" title="FRQNCY Instagram">FRQNCY</a></b>.
+            <b><a href="https://instagram.com/bounceunited" target="_blank" title="Bounce United's Instagram">Bounce United</a></b>, 
+            <b><a href="https://www.youtube.com/channel/UCoo_WkQMj2h-WFi7nBQjtyw" target="_blank" title="Miss DeepShine's YouTube Channel">DeepShine Records</a></b>, 
+            <b><a href="https://instagram.com/palmtherapysounds" target="_blank" title="Palm Therapy Sounds's Instagram">Palm Therapy Sounds</a></b>, 
+            <b><a href="https://instagram.com/onesevenmusic" target="_blank" title="One Seven Music's Instagram">One Seven Music</a></b>, 
+            <b><a href="https://instagram.com/frqncy_official" target="_blank" title="FRQNCY's Instagram">FRQNCY</a></b>.
           </p>
         </div>
       </div>
