--- a/_layouts/index.html
+++ b/_layouts/index.html
@@ -133,21 +133,36 @@
       <div class="container text-secondary py-5 text-center" style="overflow-x: hidden;">
         <h3 class="mt-3 text-uppercase text-white" data-aos="fade-right">Latest Music</h3>
         <div class="row my-4 text-left">
-          <!-- <div class="col-6 col-lg-3">
+          <div class="col-6 col-lg-3">
             <div class="item">
               <div class="cover">
                 <div class="upcoming-container" data-aos="zoom-in">
-                  <img class="img-fluid scale-on-hover upcoming" src="https://bayzamusic.com/images/releases/2020/lamentos.jpg">
+                  <img class="img-fluid scale-on-hover upcoming" src="https://bayzamusic.com/images/releases/2021/without-you.jpg">
                   <div class="centered">
                     <h4>Upcoming</h4>
-                    <small><h5>Oct 31, 2020</h5></small>
+                    <small><h5>Mar 8, 2021</h5></small>
                   </div>
                 </div>
-                  <h5 class="mb-0" data-aos="fade-left"><small><p class="mb-0 mt-2">Lamentos</p></small></h5>
+                  <h5 class="mb-0" data-aos="fade-left"><small><p class="mb-0 mt-2">Without You</p></small></h5>
                   <small><p class="mb-4" data-aos="fade-left">Bayza</p></small>
               </div>
             </div> 
-          </div>-->{% for item in sorted %}
+          </div>
+          <div class="col-6 col-lg-3">
+            <div class="item">
+              <div class="cover">
+                <div class="upcoming-container" data-aos="zoom-in">
+                  <img class="img-fluid scale-on-hover upcoming" src="https://bayzamusic.com/images/releases/2021/looking-at-you.jpg">
+                  <div class="centered">
+                    <h4>Upcoming</h4>
+                    <small><h5>Feb 5, 2021</h5></small>
+                  </div>
+                </div>
+                  <h5 class="mb-0" data-aos="fade-left"><small><p class="mb-0 mt-2">Looking At You</p></small></h5>
+                  <small><p class="mb-4" data-aos="fade-left">Bayza</p></small>
+              </div>
+            </div> 
+          </div>{% for item in sorted %}
           <div class="col-6 col-lg-3">
             <div class="item">
               <div class="cover">
