--- a/_layouts/releases.html
+++ b/_layouts/releases.html
@@ -33,11 +33,22 @@
   </head>
   <body>
 {% include navbar.html %}
+    <!-- Official Releases -->
     <section id="releases" class="bg-dark">
       <div class="container text-secondary text-center py-5" style="overflow-x: hidden;">
         <h3 class="mt-5 text-uppercase text-white" data-aos="fade-right">Official Releases</h3>
         <h4 class="font-weight-light" data-aos="fade-left">by year</h4>
         <div class="row my-4">
+          <div class="col-6 col-lg-3">
+            <div class="item">
+              <div class="cover">
+                <a href="/releases/2021">
+                  <img data-aos="zoom-in" class="img-fluid scale-on-hover" src="https://bayzamusic.com/images/2021bayzacom.jpg" alt="Bayza 2021">
+                  <h5 class="mb-0" data-aos="fade-left"><small><p class="mt-2">2021 Releases</p></small></h5>
+                </a>
+              </div>
+            </div>
+          </div>
           <div class="col-6 col-lg-3">
             <div class="item">
               <div class="cover">
@@ -72,11 +83,22 @@
         <a class="btn btn-outline-releases px-4 py-1" href="/releases/all" data-aos="flip-left">See all releases</a>
       </div>
     </section>
+    <!-- Bootlegs -->
     <section id="releases" class="bg-darkest">
       <div class="container text-secondary text-center py-5" style="overflow-x: hidden;">
         <h3 class="mt-3 text-uppercase text-white">Bootlegs</h3>
         <h4 class="font-weight-light">*Special</h4>
         <div class="row my-4">
+          <div class="col-6 col-lg-3">
+            <div class="item">
+              <div class="cover">
+                <a href="/releases/2021-bootlegs">
+                  <img data-aos="zoom-in" class="img-fluid scale-on-hover" src="https://bayzamusic.com/images/2021-bootlegsbayzacom.jpg" alt="Bayza 2021 Bootlegs">
+                  <h5 class="mb-0" data-aos="fade-left"><small><p class="mt-2">2021 Bootlegs/Remixes</p></small></h5>
+                </a>
+              </div>
+            </div>
+          </div>
           <div class="col-6 col-lg-3">
             <div class="item">
               <div class="cover">
