--- a/_layouts/fanlink.html
+++ b/_layouts/fanlink.html
@@ -201,7 +201,7 @@
               </a>{% endif %}{% if page.download %}
               <!-- free download -->
               <div class="col-lg-12 mt-3">
-                <a href="{{ page.download }}" type="button" class="btn btn-primary btn-lg btn-block text-white rounded-0" target="_blank" title="Free Download on Toneden">Free Download</a>
+                <a href="{{ page.download }}" type="button" class="btn btn-primary btn-lg btn-block text-white rounded-0" target="_blank" title="Free Download on Toneden">Free Download <i class="fas fa-download"></i></a>
               </div>{% endif %}
             </div>
           </div>
