--- a/_layouts/index.html
+++ b/_layouts/index.html
@@ -109,7 +109,7 @@
           <div class="col-12 col-md-6 row mt-4 text-right px-0" data-aos="fade-left" data-aos-anchor="#example-anchor" data-aos-offset="500" data-aos-duration="1500">
             <div class="col-12 col-md-8 d-none d-md-block mt-2 pr-0">
               <h3>Latest Release:</h3>
-              <a target="_blank" class="" href="/releases/{{ releases.last.year }}{{ releases.last.link }}/{{ releases.last.release }}">
+              <a target="_blank" class="text-white" href="/releases/{{ releases.last.year }}{{ releases.last.link }}/{{ releases.last.release }}">
                 <style>
                   .release-color:hover {
                     color: #fff!important;
@@ -271,7 +271,7 @@
         let cp = colorThief.getPalette($myImage[0], 5, 10);
         
         //Sets color to 4rd color in the palette.
-        $('.release-color').css('color','rgb(255,255,255)');
+        $('.release-color').css('color','rgb('+cp[2][0]+','+cp[2][1]+','+cp[2][2]+')');
       });
     </script>
     <script>
