--- a/_layouts/fanlink.html
+++ b/_layouts/fanlink.html
@@ -83,11 +83,11 @@
                 </div>
               </a>{% endif %}{% if page.spotify %}
               <!-- spotify -->
-                <div class="col-6 pl-5 py-4">
+                <div class="row links col-6 pl-5 py-4">
                   <img class="mx-auto d-block" src="/images/spotify.png" width="100%"/>
                 </div>
                 <div class="col-6 pr-5 py-4 text-center my-auto">
-                  <a class="row links text-white" href="{{ page.spotify }}" target="_blank" title="Stream on Spotify">
+                  <a class=" text-white" href="{{ page.spotify }}" target="_blank" title="Stream on Spotify">
                     <span class="btn btn-outline-light">Stream</span>
                   </a>
                 </div>{% endif %}{% if page.apple %}
