--- a/_layouts/fanlink.html
+++ b/_layouts/fanlink.html
@@ -214,8 +214,7 @@
                   <span class="mx-2"></span>
                   <a class="text-white" href="{{ page.tidal-buy }}" target="_blank" title="Stream on Tidal">
                     <span class="btn btn-outline-light">Stream</span>
-                  </a>
-                  {% endif %}
+                  </a>{% endif %}
                 </div>
               </div>{% endif %}{% if page.tiktok %}
               <!-- tiktok -->
