--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -17,10 +17,10 @@
                 <a target="_blank" href="https://geo.itunes.apple.com/us/artist/bayza/882647839?app=itunes">iTunes</a>
               </li>
               <li>
-                <a target="_blank" href="https://bayza.bandcamp.com/">Bandcamp</a>
+                <a target="_blank" href="https://store.tidal.com/us/artist/6374717">Tidal</a>
               </li>
               <li>
-                <a target="_blank" href="https://play.google.com/store/music/artist/Bayza?id=A267m6ooa7buyxpugsy6w7dopnu">Google Play Music</a>
+                <a target="_blank" href="https://bayza.bandcamp.com/">Bandcamp</a>
               </li>
             </ul>
           </div>
