--- a/_layouts/fanlink.html
+++ b/_layouts/fanlink.html
@@ -155,9 +155,10 @@
                 <div class="col-6 pl-5 py-4">
                   <img class="mx-auto d-block" src="/images/bandcamp.png" width="100%"/>
                 </div>
-                <a class="text-white" href="{{ page.bandcamp }}" target="_blank" title="Buy on Bandcamp">
-                  <span class="btn btn-outline-light">Buy</span>
-                </a>
+                <div class="col-6 pr-4 py-4 text-center my-auto">
+                  <a class="text-white" href="{{ page.bandcamp }}" target="_blank" title="Buy on Bandcamp">
+                    <span class="btn btn-outline-light">Buy</span>
+                  </a>
                 </div>
               </div>{% endif %}{% if page.deezer %}
               <!-- deezer -->
