--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -17,7 +17,7 @@
           <a class="nav-link" href="/#music">Music</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="/fanlinks">Fanlinks</a>
+          <a class="nav-link" href="https://lnk.bayza.ml">Fanlinks</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="/#about">About</a>
