--- a/_layouts/releases-post.html
+++ b/_layouts/releases-post.html
@@ -10,7 +10,7 @@
 
 <html lang="en">
   <head>
-    <title>{{ release.artists }} - {{ release.title }} | Bayza</title>
+    <title>{{ release.title }} | Bayza</title>
     <!-- Metadatos -->
     <meta charset="utf-8" />
     <meta name="theme-color" content="#1d1d1d"/>
