--- a/_layouts/index.html
+++ b/_layouts/index.html
@@ -16,10 +16,10 @@
     <meta property="og:type" content="website"/>
     <meta property="og:title" content="Bayza"/>
     <meta property="og:site_name" content="Bayza"/>
-    <meta property="og:image" content="https://bayzamusic.com/images/logomt-600x400.jpg"/>
+    <meta property="og:image" content="https://bayzamusic.com/images/logomt-sq.jpg"/>
     <meta property="og:image:alt" content="Bayza cover image"/>
-    <meta property="og:image:width" content="600"/>
-    <meta property="og:image:height" content="400"/>
+    <meta property="og:image:width" content="1000"/>
+    <meta property="og:image:height" content="1000"/>
     <meta property="og:description" content="Bayza is a Panamanian musician and producer."/>
     
     <!-- Twitter Card -->
