--- a/_layouts/releases.html
+++ b/_layouts/releases.html
@@ -14,10 +14,10 @@
     <meta property="og:type" content="website"/>
     <meta property="og:title" content="Bayza Music Releases"/>
     <meta property="og:site_name" content="Bayza"/>
-    <meta property="og:image" content="https://bayzamusic.com/images/logomt-sq.jpg"/>
+    <meta property="og:image" content="https://bayzamusic.com/images/logomt-sq-300.jpg"/>
     <meta property="og:image:alt" content="Bayza cover image"/>
-    <meta property="og:image:width" content="1000"/>
-    <meta property="og:image:height" content="1000"/>
+    <meta property="og:image:width" content="300"/>
+    <meta property="og:image:height" content="300"/>
     <meta property="og:description" content="All releases"/>
     
     <!-- Twitter Card -->
