--- a/_layouts/index.html
+++ b/_layouts/index.html
@@ -137,6 +137,21 @@
             <div class="item">
               <div class="cover">
                 <div class="upcoming-container" data-aos="zoom-in">
+                  <img class="img-fluid scale-on-hover upcoming" src="https://bayzamusic.com/images/releases/2021/you-said-goodbye.jpg">
+                  <div class="centered">
+                    <h4>Upcoming</h4>
+                    <small><h5>Mar 31, 2021</h5></small>
+                  </div>
+                </div>
+                  <h5 class="mb-0" data-aos="fade-left"><small><p class="mb-0 mt-2">You Said Goodbye</p></small></h5>
+                  <small><p class="mb-4" data-aos="fade-left">Bayza feat. Giulia Mihai</p></small>
+              </div>
+            </div> 
+          </div>
+          <div class="col-6 col-lg-3">
+            <div class="item">
+              <div class="cover">
+                <div class="upcoming-container" data-aos="zoom-in">
                   <img class="img-fluid scale-on-hover upcoming" src="https://bayzamusic.com/images/releases/2021/without-you.jpg">
                   <div class="centered">
                     <h4>Upcoming</h4>
@@ -159,7 +174,7 @@
                 <small><p class="mb-4" data-aos="fade-right">{{ item.date | date: "%b %-d, %Y" }}</p></small>
               </div>
             </div>
-          </div>{% if forloop.index0 == 10 %}{% break %}{% endif %}{% endfor %}
+          </div>{% if forloop.index0 == 9 %}{% break %}{% endif %}{% endfor %}
         </div>  
         <a class="btn btn-outline-releases px-4 py-1" href="/releases" data-aos="flip-left">See more</a>
       </div>
