--- a/css/links.css
+++ b/css/links.css
@@ -87,3 +87,18 @@ ul.icons li {
   -webkit-user-select: none;
   -ms-user-select: none;
 }
+
+.copy-to-clipboard {
+  font-size: 1.4rem;
+  padding: 3px 10px;
+  position: absolute;
+  top: 15px;
+  right: 30px;
+  background: #19191980;
+  border-radius: 5px;
+  opacity: 50%;
+}
+
+.copy-to-clipboard:hover {
+  opacity: 100%
+}
