--- a/css/links.css
+++ b/css/links.css
@@ -99,6 +99,17 @@ ul.icons li {
   opacity: 50%;
 }
 
+.copied-to-clipboard {
+  font-size: 1.4rem;
+  padding: 3px 10px;
+  position: absolute;
+  top: 15px;
+  right: 30px;
+  background: #19191980;
+  border-radius: 5px;
+  opacity: 100%;
+}
+
 .copy-to-clipboard:hover {
   opacity: 100%
 }
