--- a/css/links.css
+++ b/css/links.css
@@ -96,6 +96,7 @@ ul.icons li {
   background: #19191980;
   border-radius: 5px;
   opacity: 50%;
+  border: 2px solid #ffffff17;
 }
 
 .copy-to-clipboard i {
