--- a/_layouts/index.html
+++ b/_layouts/index.html
@@ -241,12 +241,14 @@
         <div class="my-3 font-weight-light text-justify">
           <p data-aos="fade-left">
             Ahmed Rangel, also known as 
-            <b><a href="https://open.spotify.com/artist/0UFz5jBFwlNKaq1JwESYnX?si=J2gUIe3FQJuz5hsK2olHoQ" target="_blank" title="Bayza Spotify">Bayza</a></b>, is a Electronic/Dance Music Producer from La Chorrera, Panama <i class="em em-flag-pa" aria-role="presentation" aria-label="Panama Flag"></i>. 
-            Born in June 1998 (22 years old) and uses 
-            <b><a href="https://www.image-line.com/flstudio/" target="_blank" title="Image-Line: FL Studio">FL Studio</a></b> for his music production, he started making music in 2012 but didn't released any track until 2014.
+            <b><a href="https://open.spotify.com/artist/0UFz5jBFwlNKaq1JwESYnX?si=J2gUIe3FQJuz5hsK2olHoQ" target="_blank" title="Bayza Spotify">Bayza</a></b>, is a Electronic/Dance Music Producer from La Chorrera, Panama <i class="em em-flag-pa" aria-role="presentation" aria-label="Panama Flag"></i>.
           </p>
           <p data-aos="fade-right">
-            He started in 2014 releasing Big Room House music during many years. It was until 2017 when he transitioned his style to Melbourne Bounce. In 2019 he transitioned one more time his style to Deep House, he first started making remixes/bootlegs of famous Pop songs, then in September he self-released his first album named Genuine. Then, In 2020 he focused on producing Deep House and Slap House music mainly.
+            His very first steps with music comes  in 2014 releasing a big room house music during many years. It was until 2017 when he transitioned his style to melbourne bounce. In 2019 he finds himself in deep house style which fits him perfectly. He started making remixes of famous pop songs, then in September 2019 he self-released his first album named Genuine. In 2020 Bayza mainly focused on producing deep house with slap house influence and you should looking forward for his coming tunes.
+          </p>
+          <p data-aos="fade-left">
+            In 2021 is Bayza hitting his very first 1M plays on Spotify with single <b><a href="https://bayzamusic.com/releases/2020/everythingiwanted" target="_blank" title="Everything I Wanted | Bayza">Everything I Wanted</a></b>. 
+          </p>
           <p data-aos="fade-right">
             He has signed tracks with labels like
             <b><a href="https://instagram.com/bounceunited" target="_blank" title="Bounce United's Instagram">Bounce United</a></b>, 
