--- a/_layouts/index.html
+++ b/_layouts/index.html
@@ -145,7 +145,7 @@
                   </div>
                 </div>
                   <h5 class="mb-0" data-aos="fade-left"><small><p class="mb-0 mt-2">Feels</p></small></h5>
-                  <small><p class="mb-4" data-aos="fade-left">Bayza</p></small>
+                  <small><p class="mb-4" data-aos="fade-left">DeejaVu x Bayza</p></small>
               </div>
             </div> 
           </div>
