--- a/_layouts/index.html
+++ b/_layouts/index.html
@@ -134,7 +134,7 @@
       <div class="container text-secondary py-5 text-center" style="overflow-x: hidden;">
         <h3 class="mt-3 text-uppercase text-white" data-aos="fade-right">Latest Music</h3>
         <div class="row my-4 text-left">
-          <div class="col-6 col-lg-3">
+          <!-- <div class="col-6 col-lg-3">
             <div class="item">
               <div class="cover">
                 <div class="upcoming-container" data-aos="zoom-in">
@@ -148,7 +148,7 @@
                   <small><p class="mb-4" data-aos="fade-left">DeejaVu x Bayza</p></small>
               </div>
             </div> 
-          </div>{% for item in sorted %}
+          </div>{% for item in sorted %} -->
           <div class="col-6 col-lg-3">
             <div class="item">
               <div class="cover">
