--- a/_layouts/index.html
+++ b/_layouts/index.html
@@ -148,7 +148,7 @@
                   <small><p class="mb-4" data-aos="fade-left">DeejaVu x Bayza</p></small>
               </div>
             </div> 
-          </div>{% for item in sorted %} -->
+          </div>-->{% for item in sorted %} 
           <div class="col-6 col-lg-3">
             <div class="item">
               <div class="cover">
