--- a/_layouts/index.html
+++ b/_layouts/index.html
@@ -183,7 +183,7 @@
               </div>
               <br/>
               <div>
-                <span id="  ">
+                <span id="button1">
                 <button type="button" class="btn btn-outline-spotify px-4 py-1" onClick="show1()";><h5 class="font-weight-light m-0">Tracks</h5></button>
                 </span>
               </div>
