--- a/_layouts/index.html
+++ b/_layouts/index.html
@@ -148,6 +148,21 @@
                   <small><p class="mb-4" data-aos="fade-left">Bayza</p></small>
               </div>
             </div> 
+          </div>
+          <div class="col-6 col-lg-3">
+            <div class="item">
+              <div class="cover">
+                <div class="upcoming-container" data-aos="zoom-in">
+                  <img class="img-fluid scale-on-hover upcoming" src="https://bayzamusic.com/images/releases/2022/im-falling.jpg">
+                  <div class="centered">
+                    <h4>Upcoming</h4>
+                    <small><h5>Dec 15, 2021</h5></small>
+                  </div>
+                </div>
+                  <h5 class="mb-0" data-aos="fade-left"><small><p class="mb-0 mt-2">Pirhan</p></small></h5>
+                  <small><p class="mb-4" data-aos="fade-left">Dj Phellix, Bayza, Sheenubb ft. Sant</p></small>
+              </div>
+            </div> 
           </div>{% for item in sorted %} 
           <div class="col-6 col-lg-3">
             <div class="item">
