--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -10,8 +10,14 @@
         <li class="nav-item">
           <a class="nav-link{% if page.path == 'index.md' %} active{% endif %}" href="/">Home</a>
         </li>
-        <li class="nav-item">
+        <li class="nav-item dropdown">
           <a class="nav-link{% if page.path contains 'releases' %} active{% endif %}" href="/releases">Releases</a>
+          <div class="dropdown-menu">
+            <a class="dropdown-item" href="/releases/2021">2021</a>
+            <a class="dropdown-item" href="/releases/2020">2020</a>
+            <a class="dropdown-item" href="/releases/2019">2019</a>
+            <a class="dropdown-item" href="/releases/2018">2018</a>
+          </div>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="https://lnk.bayza.ml">Fanlinks</a>
