--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -11,7 +11,7 @@
           <a class="nav-link{% if page.path == 'index.md' %} active{% endif %}" href="/">Home</a>
         </li>
         <li class="nav-item dropdown">
-          <a class="nav-link{% if page.path contains 'releases' %} active{% endif %}" href="/releases">Releases</a>
+          <a class="nav-link{% if page.path contains 'releases' %} active{% endif %} dropdown-toggle" id="navbardrop" href="/releases" data-toggle="dropdown">Releases</a>
           <div class="dropdown-menu">
             <a class="dropdown-item" href="/releases/2021">2021</a>
             <a class="dropdown-item" href="/releases/2020">2020</a>
