--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -13,7 +13,7 @@
         <li class="nav-item dropdown">
           <a class="nav-link{% if page.path contains 'releases' %} active{% endif %} dropdown-toggle" id="navbardrop" href="/releases" data-toggle="dropdown">Releases</a>
           <div class="dropdown-menu">
-            <a class="dropdown-item" href="/releases/2021">2021</a>
+            <a class="dropdown-item {% if page.path contains 'releases' %} active{% endif %}" href="/releases/2021">2021</a>
             <a class="dropdown-item" href="/releases/2020">2020</a>
             <a class="dropdown-item" href="/releases/2019">2019</a>
             <a class="dropdown-item" href="/releases/2018">2018</a>
