--- a/_layouts/releases-year.html
+++ b/_layouts/releases-year.html
@@ -1,7 +1,7 @@
-{%- assign sorted = site.data.releases | sort: 'date' | reverse | where: "year", page.year | where: "type", page.type -%}
+{%- assign sorted = site.data.releases | sort: 'date' | reverse | where: "year", page.year -%}
 <html lang="en">
   <head>  
-    <title>{{ page.year }} {{page.extra}} |  {{ page.type }} | Bayza</title>
+    <title>{{ page.year }} {{page.extra}} | Bayza</title>
     <!-- Metadatos -->
     <meta charset="utf-8" />
     <meta name="theme-color" content="#1d1d1d"/>
