--- a/_includes/scripts.html
+++ b/_includes/scripts.html
@@ -1,6 +1,7 @@
     <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
     <script src="https://connect.soundcloud.com/sdk/sdk-3.3.0.js"></script>
     <script src="https://apis.google.com/js/platform.js"></script>
+    <script src="/js/bayza.js"></script>
     <script src="/js/jquery-3.4.1.min.js"></script>
     <script src="/js/jquery.min.js"></script>
     <script src="/js/bootstrap.min.js"></script>
