--- a/_layouts/index.html
+++ b/_layouts/index.html
@@ -160,7 +160,7 @@
                   </div>
                 </div>
                   <h5 class="mb-0" data-aos="fade-left"><small><p class="mb-0 mt-2">Pirhan</p></small></h5>
-                  <small><p class="mb-4" data-aos="fade-left">Dj Phellix, Bayza, Sheenubb ft. Sant</p></small>
+                  <small><p class="mb-4" data-aos="fade-left">DJ Phellix, Bayza, Sheenubb ft. Sant</p></small>
               </div>
             </div> 
           </div>{% for item in sorted %} 
