--- a/_layouts/index.html
+++ b/_layouts/index.html
@@ -132,7 +132,7 @@
     </section>
     <section id="latest releases" class="bg-darkest">
       <div class="container text-secondary py-5 text-center" style="overflow-x: hidden;">
-        <h3 class="mt-3 text-uppercase text-white" data-aos="fade-right">Latest Music</h3>
+        <h3 class="mt-3 text-uppercase text-white" data-aos="fade-right">Recent Music</h3>
         <div class="row my-4 text-left">
           <div class="col-6 col-lg-3">
             <div class="item">
