--- a/_layouts/index.html
+++ b/_layouts/index.html
@@ -263,7 +263,7 @@
             His very first steps with music comes  in 2014 releasing a big room house music during many years. It was until 2017 when he transitioned his style to melbourne bounce. In 2019 he finds himself in deep house style which fits him perfectly. He started making remixes of famous pop songs, then in September 2019 he self-released his first album named Genuine. In 2020 Bayza mainly focused on producing deep house with slap house influence and you should looking forward for his coming tunes.
           </p>
           <p data-aos="fade-left">
-            In 2021 Bayza is hitting his very first 1M plays on Spotify with single <b><a href="https://bayzamusic.com/releases/2020/everythingiwanted" target="_blank" title="Everything I Wanted | Bayza">Everything I Wanted</a></b>. 
+            In 2021 Bayza is hitting his very first 1M plays on Spotify with his <b><a href="https://bayzamusic.com/releases/2020/everythingiwanted" target="_blank" title="Everything I Wanted | Bayza">Everything I Wanted</a></b>'s cover'. 
           </p>
           <p data-aos="fade-right">
             He has signed tracks with labels like
