--- a/_layouts/index.html
+++ b/_layouts/index.html
@@ -177,7 +177,7 @@
             </div>
           </div>{% if forloop.index0 == 9 %}{% break %}{% endif %}{% endfor %}
         </div>  
-        <a class="btn btn-outline-releases px-4 py-1" href="/releases" data-aos="flip-left">See more</a>
+        <a class="btn btn-outline-releases px-4 py-1" href="/releases/all" data-aos="flip-left">See all releases</a>
       </div>
     </section>
     <section id="music" class="bg-dark text-secondary text-center py-5">
