--- a/css/bayza.css
+++ b/css/bayza.css
@@ -411,3 +411,10 @@ b a:hover {
         max-width: 1360px!important;
     }
 }
+
+.platform-icons {
+    display: inline-block;
+    padding: 10px;
+    margin: 0px!important;
+    font-size: 20px;
+}
